# vibe-kanban

./: .gitignore  CLAUDE.md  CODE-OF-CONDUCT.md  Cargo.toml  README.md  local-build.sh  package.json  setup.sh  test-npm-package.sh
.genie/backups/2025-11-15T17-56-40-599Z/: AGENTS.md
.genie/code/agents/: install.md  update.md
.genie/product/: README.md  environment.md  mission-lite.md  mission.md  roadmap.md  tech-stack.md
.genie/spells/: install-genie.md  install.md
.genie/state/: backup-info.json  version.json
.genie/wishes/install-forge-core/reports/: done-install-code-forge-core-20251115T181708Z.md
.genie/wishes/install/reports/: done-install-forge-core-202511151835.md
.sqlx/: query-089aa9091e57ec7ff1d74e634425fbf19a131a81d77c0d48ff6a879133781c3a.json  query-2680a66890b6a99bd482cb7b0feb01cd2064bf6525a9dbd18fcf094ce3adf71d.json  query-4426e74781595cd1102a582d806a0b68498727abe5440395a28792fc5c465507.json  query-4d7f023548117caf4b38dd9b9c2f11af91da84ba7b0df07dcfbc08b294a3f5ae.json  query-4f74ae8e62c40c3ceeeeb272e646ffab28e151a8184fd6c2a1a2644b2585b3da.json  query-982f1650bd7db80e655d5480143aaa4992bd71d1cbd411be8bc17e57d12b2b58.json  query-9b5c36963aa1b2f35592abd572ab8c5e983ed12aa05abb805487e34494d6123f.json  query-a8fb9a3d585d04ea16493ee7a5996203352fdb535803f9ad6c09f203bbff0f4a.json  query-c5956454c74a363fa2c89964d56a659d419ed301ad879e715222c52eeef8b91c.json  query-e56d8787356a3d7bed4bccb36a9b3cef940dc79243a26fbeb1c30949bab13e20.json
assets/scripts/: toast-notification.ps1
crates/db/: Cargo.toml
crates/db/.sqlx/: query-4352df3dbfd875bd1f020abd69cb3824328b1e407e1f94e1e77527a4d2cc2984.json  query-495c388bc81bd3605fe426a6d28cd8e53407872ff14fbc8335249857c264c5a3.json  query-91336ab52f95d0970f55d26c7ee5fee63df986ce907b00a5f875b44789469c0d.json  query-d84bbcad8d4e1de1c22312576a2f9067eeb47b5b65ee4d2b2c34ceb421deccae.json  query-f2f0aa816059c4ba8f491b11a5594a510279e937128ff9297066cedaab179f30.json
crates/db/migrations/: 20250617183714_init.sql  20251008000001_forge_omni_tables.sql  20251020000001_add_agent_task_status.sql  20251027000000_create_forge_agents.sql  20251105000000_add_forge_task_attempt_config.sql  20251105140000_add_token_usage_to_task_attempts.sql  20251105140001_add_dev_server_id_to_tasks.sql  20251107000001_create_forge_extension_tables.sql  20251112000000_add_agent_archived_task_statuses.sql  20251112000001_add_parent_task_attempt_to_tasks.sql  20251112000001_fix_tasks_old_foreign_keys.sql
crates/db/src/: lib.rs
crates/db/src/models/: task.rs  task_attempt.rs
crates/deployment/src/: lib.rs
crates/executors/: Cargo.toml  default_mcp.json  default_profiles.json
crates/executors/src/: profile.rs
crates/executors/src/executors/: claude.rs  codex.rs  copilot.rs  mod.rs
crates/local-deployment/src/: container.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: lib.rs  main.rs
crates/server/src/mcp/: advanced_tools.rs  mod.rs  task_server.rs
crates/server/src/routes/: config.rs  frontend.rs  images.rs  mod.rs  task_attempts.rs  tasks.rs
crates/services/src/services/: analytics.rs  auth.rs  git.rs  github_service.rs  image.rs  pr_monitor.rs  worktree_manager.rs
crates/services/tests/: git_workflow.rs
crates/utils/: Cargo.toml
crates/utils/src/: assets.rs  git.rs  lib.rs  path.rs  port_file.rs  sentry.rs
docs/: docs.json  getting-started.mdx  index.mdx  supported-coding-agents.mdx
docs/agents/: amp.mdx  ccr.mdx  claude-code.mdx  cursor-cli.mdx  gemini-cli.mdx  github-copilot.mdx  openai-codex.mdx  opencode.mdx  qwen-code.mdx
docs/configuration-customisation/: agent-configurations.mdx  global-settings.mdx  keyboard-shortcuts.mdx
docs/core-features/: completing-a-task.mdx  creating-projects.mdx  creating-task-attempts.mdx  creating-tasks.mdx  monitoring-task-execution.mdx  new-task-attempts.mdx  preview-mode.mdx  resolving-rebase-conflicts.mdx  reviewing-code-changes.mdx  subtasks.mdx  task-details-full-screen.mdx  testing-your-application.mdx
docs/integrations/: github-integration.mdx  mcp-server-configuration.mdx  vibe-kanban-mcp-server.mdx  vscode-extension.mdx
frontend/: README-FORGE.md  index.html  package.json  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: main.tsx
frontend/src/components/layout/: navbar.tsx
frontend/src/config/: showcases.ts
frontend/src/contexts/: project-context.tsx
frontend/src/hooks/: useConversationHistory.ts
frontend/src/i18n/: config.ts  languages.ts
frontend/src/utils/: companion-install-task.ts  status-labels.ts  style-override.tsx
frontend/src/vscode/: bridge.ts
npx-cli/: README.md  package.json
shared/: types.ts
(+37 files in other folders)
